// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertModal should render properly without any props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AlertModal
    active={false}
    content=""
    onClose={[Function]}
    title="Atenção"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "active": false,
      "buttons": Array [
        Object {
          "action": [Function],
          "label": "OK",
        },
      ],
      "cancel": null,
      "content": "",
      "hasButtons": true,
      "title": "Atenção",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "active": false,
        "buttons": Array [
          Object {
            "action": [Function],
            "label": "OK",
          },
        ],
        "cancel": null,
        "content": "",
        "hasButtons": true,
        "title": "Atenção",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`AlertModal should render with a new title name 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AlertModal
    active={false}
    content=""
    onClose={[Function]}
    title="this is a alert modal title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "active": false,
      "buttons": Array [
        Object {
          "action": [Function],
          "label": "OK",
        },
      ],
      "cancel": null,
      "content": "",
      "hasButtons": true,
      "title": "this is a alert modal title",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "active": false,
        "buttons": Array [
          Object {
            "action": [Function],
            "label": "OK",
          },
        ],
        "cancel": null,
        "content": "",
        "hasButtons": true,
        "title": "this is a alert modal title",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
